networking/internal-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-internal-bridge
  namespace: external-ingress
spec:
  type: ExternalName
  # This is the IP of the Internal Cluster LoadBalancer (on your Internal VLAN)
  # Your FortiGate will handle the routing between the DMZ VM and this IP.
  externalName: 10.0.20.50
